# OctopusPublic

./: .gitignore  README.md  eval.sh  evaluation.py  pyproject.toml  setup.py  train.sh
src/octopus/: cache_utils.py  cache_utils_pruned.py  data.py  distributed.py  logger.py  optimizer.py  train.py  utils.py
src/octopus/models/: __init__.py
src/octopus/models/llama/: attention.py  configuration_octopus_llama.py  modeling_octopus_llama.py  modeling_original_llama.py
src/octopus/models/qwen3/: attention.py  configuration_octopus_qwen3.py  modeling_octopus_qwen3.py
