[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "optopus"
version = "0.1.0"
description = "Selective Attention for Large Language Models"
readme = "README.md"
requires-python = ">=3.12"

authors = [
    { name = "Chien Nguyen", email = "chiennv.hust@gmail.com" }
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]